fix: fixed packages for $app and $mainscreen
-add app package
-add mainscreen package

Previously both modules had "my.company.app" package name, now it's "my.company.app.app" and "my.company.app.mainscreen"

--- a/sources/features/mainscreen/src/main/AndroidManifest.xml
+++ b/sources/features/mainscreen/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <application>
         <activity
-            android:name="my.company.app.MainActivity"
+            android:name="my.company.app.mainscreen.MainActivity"
             android:screenOrientation="portrait" />
     </application>
 </manifest>
