--- a/sources/base/app/src/main/AndroidManifest.xml
+++ b/sources/base/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="my.company.app">
 
     <application
-        android:name=".MyApplication"
+        android:name=".app.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
