--- a/sources/features/mainscreen/src/main/AndroidManifest.xml
+++ b/sources/features/mainscreen/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="my.company.app" >
+    package="my.company.app.mainscreen" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application>
         <activity
-            android:name="my.company.app.mainscreen.MainActivity"
+            android:name=".MainActivity"
             android:screenOrientation="portrait" />
     </application>
 </manifest>
