--- a/sources/features/launcher/src/main/AndroidManifest.xml
+++ b/sources/features/launcher/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="my.company.app">
+    package="my.company.app.launcher">
 
     <application>
         <activity android:name="my.company.app.launcher.LauncherActivity">
